Update monitor tool to run on Java 16 and later
Java 16 and later require the jvmstat packages to be exported.